# carbon-layer

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  TECHNICAL_REQUIREMENTS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
domains/: payment.yaml
examples/: github-actions.yml
scenarios/disputes/: dispute-spike.yaml
scenarios/payment-failures/: flash-sale.yaml  gateway-error-burst.yaml  max-amount.yaml  min-amount.yaml  payment-decline-spike.yaml
scenarios/refund-chaos/: refund-storm.yaml
scenarios/settlement/: settlement-delay.yaml
scenarios/upi-failures/: mandate-rejection.yaml  upi-timeout.yaml  vpa-not-found.yaml
src/carbon/: __init__.py  callback.py  cli.py  config.py
src/carbon/adapters/: __init__.py  base.py  mock.py  registry.py
src/carbon/adapters/cashfree/: __init__.py  adapter.py  client.py
src/carbon/adapters/juspay/: __init__.py  adapter.py  client.py
src/carbon/adapters/razorpay/: __init__.py  adapter.py  client.py
src/carbon/adapters/stripe/: __init__.py  adapter.py  client.py
src/carbon/compiler/: __init__.py  compiler.py  models.py
src/carbon/engine/: __init__.py  executor.py  resolver.py
src/carbon/graph/: __init__.py  loader.py  models.py
src/carbon/reporter/: __init__.py  html.py  terminal.py
src/carbon/scenarios/: __init__.py  models.py  parser.py  registry.py
src/carbon/storage/: __init__.py  db.py  models.py  repo.py
src/carbon/validator/: __init__.py  validator.py
src/carbon/webhook/: __init__.py  payloads.py  sender.py
tests/: conftest.py  test_compiler.py  test_scenarios.py  test_validator.py  test_webhook.py
waitlist/: index.html
