[project]
name = "carbon-layer"
version = "0.5.0"
description = "Chaos engineering for payment flows"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Pritom Mazumdar"}
]
keywords = ["payments", "chaos-engineering", "testing", "razorpay", "stripe", "cashfree", "juspay", "webhooks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/Pritom14/carbon-layer"
Repository = "https://github.com/Pritom14/carbon-layer"
Issues = "https://github.com/Pritom14/carbon-layer/issues"

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "respx>=0.20.0",
]

[project.scripts]
carbon = "carbon.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
